--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,3 +1,48 @@
-<div *ngFor="let pokemon of list">
-  {{pokemon.name}}
+<div class="container">
+  <ui-card *ngFor="let pokemon of list" (click)="get(pokemon)">
+    <ui-card-content>{{pokemon.name}}</ui-card-content>
+  </ui-card>
 </div>
+
+<ui-dialog #pokemonDialog>
+  <div *ngIf="loading">
+    <div class="ui-progress accent">
+      <div class="indeterminate"></div>
+    </div>
+    <ui-card-content>
+      Buscando dados do pokemon...
+    </ui-card-content>
+  </div>
+
+  <div *ngIf="!loading">
+    <ui-card-media *ngIf="pokemon.sprites" style="height: 96px">
+      <img *ngIf="!pokemon.female" [src]="pokemon.sprites.front_default"/>
+      <img *ngIf="!pokemon.female" [src]="pokemon.sprites.back_default"/>
+      <img *ngIf="pokemon.female" [src]="pokemon.sprites.front_female"/>
+      <img *ngIf="pokemon.female" [src]="pokemon.sprites.back_female"/>
+    </ui-card-media>
+
+    <div class="gender" *ngIf="pokemon.sprites.front_female">
+      <div class="male" (click)="pokemon.female = false" [class.active]="!pokemon.female">Male</div>
+      <div class="female" (click)="pokemon.female = true" [class.active]="pokemon.female">Female</div>
+    </div>
+
+    <ul class="ui-list">
+      <li>
+        {{pokemon.name}}
+      </li>
+      <li>
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M12,3A4,4 0 0,1 16,7C16,7.73 15.81,8.41 15.46,9H18C18.95,9 19.75,9.67 19.95,10.56C21.96,18.57 22,18.78 22,19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19C2,18.78 2.04,18.57 4.05,10.56C4.25,9.67 5.05,9 6,9H8.54C8.19,8.41 8,7.73 8,7A4,4 0 0,1 12,3M12,5A2,2 0 0,0 10,7A2,2 0 0,0 12,9A2,2 0 0,0 14,7A2,2 0 0,0 12,5M6,11V19H8V16.5L9,17.5V19H11V17L9,15L11,13V11H9V12.5L8,13.5V11H6M15,11C13.89,11 13,11.89 13,13V17C13,18.11 13.89,19 15,19H18V14H16V17H15V13H18V11H15Z" /></svg>
+        </div>
+        {{convertHectogramsToKilo(pokemon.weight)}}kg
+      </li>
+      <li>
+        <div class="icon">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24"><path d="M7,2C8.78,2 9.67,4.16 8.42,5.42C7.16,6.67 5,5.78 5,4A2,2 0 0,1 7,2M5.5,7H8.5A2,2 0 0,1 10.5,9V14.5H9V22H5V14.5H3.5V9A2,2 0 0,1 5.5,7M21,8H15V10H21M21,11H18V13H21M21,2H15V4H21M21,5H18V7H21M21,14H15V16H21M21,20H15V22H21M21,17H18V19H21" /></svg>
+        </div>
+        {{convertDecimetresToMeters(pokemon.height)}}m
+      </li>
+    </ul>
+  </div>
+</ui-dialog>
