--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~ng-smn-ui/lib/core/core";
+@import "~ng-smn-ui/lib/core/theme";
+
+$primary: (color: 'blue', hue: '500');
+$accent: (color: 'green', hue: '50');
+
+/**
+  * O parâmetro passado como "false" significa que queremos um tema light
+  * Basta trocar esse parâmetro para "true" e teremos um tema dark
+**/
+$theme: ui-theme($primary, $accent, false);
+
+@include ui-core();
+
+@include ui-build-theme($theme);
