Api service errors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <a [routerLink]="['pokemon']">GO TO POKEMONS</a>
 
 <router-outlet></router-outlet>
+
+<ui-snackbar-container></ui-snackbar-container>
